--- a/indx.html
+++ b/indx.html
@@ -35,8 +35,8 @@
 <body>
     <main>
         <h1>Style Menu</h1>
-        <a href="style-link-txt-menu-bar.html">Menu em Barra</a>
-        <a href="style-menu-burguer.html">Menu Hamburger</a>
+        <a href="paginas/style-link-txt-menu-bar.html">Menu em Barra</a>
+        <a href="paginas/style-menu-burguer.html">Menu Hamburger</a>
     </main>
 </body>
 </html>
