--- a/paginas/style-menu-burguer.html
+++ b/paginas/style-menu-burguer.html
@@ -93,7 +93,7 @@
             </ul>
         </nav>
     </header>
-    <main> <a class="home" href="indx.html">Inicil</a></main>
+    <main> <a class="home" href="../indx.html">Inicil</a></main>
 
 
     
