--- a/paginas/style-link-txt-menu-bar.html
+++ b/paginas/style-link-txt-menu-bar.html
@@ -92,7 +92,7 @@
         <a href="#" class="l6">Link</a>
     </menu>
 
-    <a class="home" href="../indx.html">Inicil</a>
+    <a class="home" href="../index.html">Inicil</a>
     
 </body>
 </html>
