--- a/paginas/style-menu-burguer.html
+++ b/paginas/style-menu-burguer.html
@@ -23,6 +23,10 @@
             align-items: center;
         }
 
+        h1{
+
+        }
+
         .hamburger{
             display: none;
             border: none;
@@ -93,7 +97,7 @@
             </ul>
         </nav>
     </header>
-    <main> <a class="home" href="../indx.html">Inicil</a></main>
+    <main> <a class="home" href="../index.html">Inicil</a></main>
 
 
     
